# fastapi_events_toy

./: main.py  pyproject.toml
