[tool.poetry]
name = "fastapi-events-toy"
version = "0.1.0"
description = ""
authors = ["Pau Perez <saulopefa@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi-events = "^0.11.1"
pydantic = "^2.8.2"
fastapi = "^0.111.1"
pdbpp = "^0.10.3"
mypy = "^1.11.0"

[tool.poetry.group.dev.dependencies]
devtools = "^0.12.2"
mypy = "^1.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
